 - `connection::get_verbosity` is gone.
 - Some enums have changed names: `accesspolicy` to `access_policy`, and so on.
 - `dynamic_params` now takes an accessor.
 - Fixed "const" support in arguments to parameterised/prepared statements.
 - Connection objects can now be moved.
 - `connections::options()` is gone.
 - Replaced pqxx-fulltest with `test_all.py`.
 - Some `size_type` have changed to different types, to match current libpq.
 - Internal overflows are more consistently caught and reported.
 - Items marked "deprecated" have been removed.
 - win32/libpqxx.cxx and DllMain did not seem to be needed, so they're gone.
 - Large objects now require backend version 9.3 or better.
 - Seeking inside large objects now supports 64-bit sizes.
 - Visual Studio project files and sample headers are gone.  Use CMake.
 - MinGW Makefiles are gone.  Use `configure` or CMake.
6.4.4
 - Use pkg-config if pg-config is not available.
 - In CMake build, prefer CMake's config headers over any found in source tree.
6.4.3
 - Updated copyright strings.
 - Added missing "stream" headers to autotools-based install.
 - Added stream headers to pqxx/pqxx header.
6.4.2
 - Fix mistake for Windows in 6.4.1: use PQfreemem, not std::free.
 - Easily enable runtime checks in configure: "--enable-audit".
 - Enable optimisation in CircleCI build.
6.4.1
 - Fixed more memory leaks.
6.4.0
 - Half fix, half work around nasty notice processor life time bug.
 - Fix selective running of tests: "test/unit/runner test_infinities".
 - Added some missing `std::` qualifications.
6.3.3
 - Throw more appropriate error when unable to read client encoding.
 - CMake build fixes.
6.3.2
 - Conversion errors no longer throw pqxx::failure; always conversion_error!
 - Use C++17's built-in numeric string conversions, if available.
 - Query numeric precision in a more sensible, standard way.
 - Avoid "dead code" warning.
 - Replace obsolete autoconf macros.
 - Remove all "using namespace std".
 - CMake build fixes.
6.3.1